Solving Issues on Github
1) Github link provided on homepage
2) Image link broken in week-04 exp - fixed

--- a/abhi1210/css/homepage.css
+++ b/abhi1210/css/homepage.css
@@ -211,7 +211,7 @@ hr{
 
 /* Direct Links */
 .directLinks{
-    width:600px;
+    width:800px;
     margin:auto;
     clear:both;
 }
